// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render InputRadioNumber InputRadioNumber with "over max" option 1`] = `
<div>
  <div
    class="survey-question__input-radio-group-container"
  >
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_1__input-radio__1"
          name="test_1"
          type="radio"
          value="1"
        />
        <label
          for="test_1__input-radio__1"
        >
          <span>
            1
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_2__input-radio__2"
          name="test_2"
          type="radio"
          value="2"
        />
        <label
          for="test_2__input-radio__2"
        >
          <span>
            2
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_3__input-radio__3"
          name="test_3"
          type="radio"
          value="3"
        />
        <label
          for="test_3__input-radio__3"
        >
          <span>
            3
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_4__input-radio__4"
          name="test_4"
          type="radio"
          value="4"
        />
        <label
          for="test_4__input-radio__4"
        >
          <span>
            4+
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputRadioNumber InputRadioNumber with selected value 1`] = `
<div>
  <div
    class="survey-question__input-radio-group-container"
  >
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_1__input-radio__1"
          name="test_1"
          type="radio"
          value="1"
        />
        <label
          for="test_1__input-radio__1"
        >
          <span>
            1
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_2__input-radio__2"
          name="test_2"
          type="radio"
          value="2"
        />
        <label
          for="test_2__input-radio__2"
        >
          <span>
            2
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_3__input-radio__3"
          name="test_3"
          type="radio"
          value="3"
        />
        <label
          for="test_3__input-radio__3"
        >
          <span>
            3
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="input-radio"
          id="test_4__input-radio__4"
          name="test_4"
          type="radio"
          value="4"
        />
        <label
          for="test_4__input-radio__4"
        >
          <span>
            4+
          </span>
        </label>
      </div>
    </div>
    <div
      style="display: flex; align-items: center; gap: 1rem;"
    >
      <label
        for="testover-max"
      >
        <span>
          SpecifyAboveLimit:
        </span>
      </label>
      <input
        class="apptr__form-input apptr__input-string input-large"
        id="testover-max"
        min="4"
        name="testover-max"
        pattern="[0-9]*"
        style="width: 6rem;"
        type="number"
        value="4"
      />
    </div>
  </div>
</div>
`;

exports[`Render InputRadioNumber InputRadioNumber without "over max" option 1`] = `
<div>
  <div
    class="survey-question__input-radio-group-container"
  >
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_1__input-radio__1"
          name="test_1"
          type="radio"
          value="1"
        />
        <label
          for="test_1__input-radio__1"
        >
          <span>
            1
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_2__input-radio__2"
          name="test_2"
          type="radio"
          value="2"
        />
        <label
          for="test_2__input-radio__2"
        >
          <span>
            2
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-radio-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-radio"
          id="test_3__input-radio__3"
          name="test_3"
          type="radio"
          value="3"
        />
        <label
          for="test_3__input-radio__3"
        >
          <span>
            3
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
